# connection-hub

./: .cosmic-ray-config.toml  .coveragerc  .mypy.ini  .ruff.toml  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: lint-and-test.yaml  mutation-test.yaml  renovate.yaml
docs/contracts/: message_publisher.md
src/connection_hub/application/: __init__.py
src/connection_hub/application/command_processors/: __init__.py  acknowledge_presence.py  create_game.py  create_lobby.py  disconnect_from_game.py  disqualify_player.py  end_game.py  force_leave_lobby.py  join_lobby.py  kick_from_lobby.py  leave_lobby.py  reconnect_to_game.py  remove_from_lobby.py  start_game.py  try_to_disconnect_from_lobby.py  try_to_disqualify_player.py
src/connection_hub/application/common/: __init__.py  centrifugo_client.py  constants.py  event_publisher.py  exceptions.py  identity_provider.py  task_scheduler.py  transaction_manager.py
src/connection_hub/domain/: __init__.py  exceptions.py  identitifiers.py
src/connection_hub/domain/constants/: __init__.py  player_status.py  user_role.py
src/connection_hub/domain/models/: __init__.py  game.py  lobby.py  player_state.py  rule_set.py
src/connection_hub/infrastructure/: __init__.py  common_retort.py  event_publisher.py  identity_provider.py  ioc_container.py  operation_id.py  redis_config.py
src/connection_hub/main/: cli.py  message_consumer.py  task_executor.py  task_scheduler.py  web_api.py
src/lobby/domain/: identitifiers.py
src/lobby/infrastructure/: common_retort.py  event_publisher.py  identity_provider.py  ioc_container.py
src/lobby/main/: cli.py  web_api.py
systemd/: connection_hub.message_consumer.service  connection_hub.task_executor.service  connection_hub.task_scheduler.service  lobby.web_api.service
tests/: conftest.py
tests/application/command_processors/: fakes.py  test_acknowledge_presence.py  test_create_game.py  test_create_lobby.py  test_disconnect_from_game.py  test_end_game.py  test_force_leave_lobby.py  test_join_lobby.py  test_kick_from_lobby.py  test_leave_lobby.py  test_reconnect_to_game.py  test_remove_from_lobby.py  test_start_game.py  test_try_to_disqualify_player.py  try_to_disconnect_from_lobby.py
tests/infrastructure/: conftest.py
tests/infrastructure/database/: conftest.py
tests/infrastructure/message_broker/: __init__.py  test_event_publisher.py
tests/presentation/message_consumer/: test_ioc_container.py  test_routes.py
tests/presentation/task_executor/: test_executors.py  test_ioc_container.py
(+94 files in other folders)
