[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connection_hub"
description = "Manages lobbies and player connections in the games."
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "uuid7==0.1.*",
    "python-json-logger==3.3.*",
    "redis==5.2.*",
    "nats-py==2.9.*",
    "httpx==0.28.*",
    "dishka==1.4.*",
    "adaptix==3.0.b9",
    "cyclopts==3.9.*",
    "taskiq==0.11.*",
    "faststream[nats,cli]==0.5.*",
    "taskiq-redis==1.0.*",
    "taskiq-nats==0.5.*",
]

[project.optional-dependencies]
dev = [
    "mypy==1.15.*",
    "ruff==0.11.*",
    "pre-commit==4.1.*",
    "pytest==8.3.*",
    "pytest-asyncio==0.25.*",
    "pytest-cov==6.0.*",
    "cosmic-ray==8.4.*",
]

[project.scripts]
connection-hub = "connection_hub.main.cli:main"
