[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connection_hub"
description = "Manages lobbies and player connections in the games."
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "uuid7==0.1.*",
    "python-json-logger==3.3.*",
    "redis==6.4.*",
    "nats-py==2.11.*",
    "httpx==0.28.*",
    "dishka==1.6.*",
    "adaptix==3.0.0b11",
    "cyclopts==3.24.*",
    "taskiq==0.11.*",
    "faststream[nats,cli]==0.5.*",
    "taskiq-redis==1.1.*",
    "taskiq-nats==0.5.*",
    "tenacity==9.1.*",
]

[project.optional-dependencies]
dev = [
    "mypy==1.17.*",
    "ruff==0.12.*",
    "pre-commit==4.2.*",
    "pytest==8.4.*",
    "pytest-asyncio==1.1.*",
    "pytest-cov==6.2.*",
    "cosmic-ray==8.4.*",
]

[project.scripts]
connection-hub = "connection_hub.main.cli:main"
